parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> INT ID SEMICOLON
Rule 5     statement -> FLOAT ID SEMICOLON
Rule 6     statement -> STRING ID SEMICOLON
Rule 7     statement -> ID EQUALS expression SEMICOLON
Rule 8     statement -> ID EQUALS STRING_LITERAL SEMICOLON
Rule 9     statement -> FOR LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN statement
Rule 10    statement -> WHILE LPAREN expression RPAREN statement
Rule 11    statement -> LBRACE statements RBRACE
Rule 12    statement -> IF LPAREN expression RPAREN statement
Rule 13    statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 14    statement -> expression SEMICOLON
Rule 15    expression -> expression PLUS term
Rule 16    expression -> expression MINUS term
Rule 17    expression -> expression LOR term
Rule 18    expression -> expression LAND term
Rule 19    expression -> expression EQ term
Rule 20    expression -> expression NE term
Rule 21    expression -> expression LT expression
Rule 22    expression -> expression GT expression
Rule 23    expression -> expression LE expression
Rule 24    expression -> expression GE expression
Rule 25    expression -> term
Rule 26    term -> term TIMES factor
Rule 27    term -> term DIVIDE factor
Rule 28    term -> factor
Rule 29    factor -> NUMBER
Rule 30    factor -> FLOAT
Rule 31    factor -> STRING_LITERAL
Rule 32    factor -> ID
Rule 33    factor -> LPAREN expression RPAREN
Rule 34    expression -> ID EQUALS expression
Rule 35    expression -> LBRACKET elements RBRACKET
Rule 36    elements -> elements COMMA expression
Rule 37    elements -> expression
Rule 38    elements -> <empty>

Terminals, with rules where they appear

COMMA                : 36
DIVIDE               : 27
ELSE                 : 13
EQ                   : 19
EQUALS               : 7 8 34
FLOAT                : 5 30
FOR                  : 9
GE                   : 24
GT                   : 22
ID                   : 4 5 6 7 8 32 34
IF                   : 12 13
INT                  : 4
LAND                 : 18
LBRACE               : 11
LBRACKET             : 35
LE                   : 23
LOR                  : 17
LPAREN               : 9 10 12 13 33
LT                   : 21
MINUS                : 16
NE                   : 20
NUMBER               : 29
PLUS                 : 15
RBRACE               : 11
RBRACKET             : 35
RPAREN               : 9 10 12 13 33
SEMICOLON            : 4 5 6 7 8 9 9 14
STRING               : 6
STRING_LITERAL       : 8 31
TIMES                : 26
WHILE                : 10
error                : 

Nonterminals, with rules where they appear

elements             : 35 36
expression           : 7 9 9 9 10 12 13 14 15 16 17 18 19 20 21 21 22 22 23 23 24 24 33 34 36 37
factor               : 26 27 28
program              : 0
statement            : 2 3 9 10 12 13 13
statements           : 1 2 11
term                 : 15 16 17 18 19 20 25 26 27

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . INT ID SEMICOLON
    (5) statement -> . FLOAT ID SEMICOLON
    (6) statement -> . STRING ID SEMICOLON
    (7) statement -> . ID EQUALS expression SEMICOLON
    (8) statement -> . ID EQUALS STRING_LITERAL SEMICOLON
    (9) statement -> . FOR LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN statement
    (10) statement -> . WHILE LPAREN expression RPAREN statement
    (11) statement -> . LBRACE statements RBRACE
    (12) statement -> . IF LPAREN expression RPAREN statement
    (13) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (14) statement -> . expression SEMICOLON
    (15) expression -> . expression PLUS term
    (16) expression -> . expression MINUS term
    (17) expression -> . expression LOR term
    (18) expression -> . expression LAND term
    (19) expression -> . expression EQ term
    (20) expression -> . expression NE term
    (21) expression -> . expression LT expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression GE expression
    (25) expression -> . term
    (34) expression -> . ID EQUALS expression
    (35) expression -> . LBRACKET elements RBRACKET
    (26) term -> . term TIMES factor
    (27) term -> . term DIVIDE factor
    (28) term -> . factor
    (29) factor -> . NUMBER
    (30) factor -> . FLOAT
    (31) factor -> . STRING_LITERAL
    (32) factor -> . ID
    (33) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 4
    FLOAT           shift and go to state 6
    STRING          shift and go to state 7
    ID              shift and go to state 5
    FOR             shift and go to state 10
    WHILE           shift and go to state 12
    LBRACE          shift and go to state 13
    IF              shift and go to state 14
    LBRACKET        shift and go to state 16
    NUMBER          shift and go to state 18
    STRING_LITERAL  shift and go to state 9
    LPAREN          shift and go to state 11

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 8
    term                           shift and go to state 15
    factor                         shift and go to state 17

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . INT ID SEMICOLON
    (5) statement -> . FLOAT ID SEMICOLON
    (6) statement -> . STRING ID SEMICOLON
    (7) statement -> . ID EQUALS expression SEMICOLON
    (8) statement -> . ID EQUALS STRING_LITERAL SEMICOLON
    (9) statement -> . FOR LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN statement
    (10) statement -> . WHILE LPAREN expression RPAREN statement
    (11) statement -> . LBRACE statements RBRACE
    (12) statement -> . IF LPAREN expression RPAREN statement
    (13) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (14) statement -> . expression SEMICOLON
    (15) expression -> . expression PLUS term
    (16) expression -> . expression MINUS term
    (17) expression -> . expression LOR term
    (18) expression -> . expression LAND term
    (19) expression -> . expression EQ term
    (20) expression -> . expression NE term
    (21) expression -> . expression LT expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression GE expression
    (25) expression -> . term
    (34) expression -> . ID EQUALS expression
    (35) expression -> . LBRACKET elements RBRACKET
    (26) term -> . term TIMES factor
    (27) term -> . term DIVIDE factor
    (28) term -> . factor
    (29) factor -> . NUMBER
    (30) factor -> . FLOAT
    (31) factor -> . STRING_LITERAL
    (32) factor -> . ID
    (33) factor -> . LPAREN expression RPAREN

    $end            reduce using rule 1 (program -> statements .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 6
    STRING          shift and go to state 7
    ID              shift and go to state 5
    FOR             shift and go to state 10
    WHILE           shift and go to state 12
    LBRACE          shift and go to state 13
    IF              shift and go to state 14
    LBRACKET        shift and go to state 16
    NUMBER          shift and go to state 18
    STRING_LITERAL  shift and go to state 9
    LPAREN          shift and go to state 11

    statement                      shift and go to state 19
    expression                     shift and go to state 8
    term                           shift and go to state 15
    factor                         shift and go to state 17

state 3

    (3) statements -> statement .

    INT             reduce using rule 3 (statements -> statement .)
    FLOAT           reduce using rule 3 (statements -> statement .)
    STRING          reduce using rule 3 (statements -> statement .)
    ID              reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    LBRACE          reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    LBRACKET        reduce using rule 3 (statements -> statement .)
    NUMBER          reduce using rule 3 (statements -> statement .)
    STRING_LITERAL  reduce using rule 3 (statements -> statement .)
    LPAREN          reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> INT . ID SEMICOLON

    ID              shift and go to state 20


state 5

    (7) statement -> ID . EQUALS expression SEMICOLON
    (8) statement -> ID . EQUALS STRING_LITERAL SEMICOLON
    (34) expression -> ID . EQUALS expression
    (32) factor -> ID .

    EQUALS          shift and go to state 21
    TIMES           reduce using rule 32 (factor -> ID .)
    DIVIDE          reduce using rule 32 (factor -> ID .)
    SEMICOLON       reduce using rule 32 (factor -> ID .)
    PLUS            reduce using rule 32 (factor -> ID .)
    MINUS           reduce using rule 32 (factor -> ID .)
    LOR             reduce using rule 32 (factor -> ID .)
    LAND            reduce using rule 32 (factor -> ID .)
    EQ              reduce using rule 32 (factor -> ID .)
    NE              reduce using rule 32 (factor -> ID .)
    LT              reduce using rule 32 (factor -> ID .)
    GT              reduce using rule 32 (factor -> ID .)
    LE              reduce using rule 32 (factor -> ID .)
    GE              reduce using rule 32 (factor -> ID .)


state 6

    (5) statement -> FLOAT . ID SEMICOLON
    (30) factor -> FLOAT .

    ID              shift and go to state 22
    TIMES           reduce using rule 30 (factor -> FLOAT .)
    DIVIDE          reduce using rule 30 (factor -> FLOAT .)
    SEMICOLON       reduce using rule 30 (factor -> FLOAT .)
    PLUS            reduce using rule 30 (factor -> FLOAT .)
    MINUS           reduce using rule 30 (factor -> FLOAT .)
    LOR             reduce using rule 30 (factor -> FLOAT .)
    LAND            reduce using rule 30 (factor -> FLOAT .)
    EQ              reduce using rule 30 (factor -> FLOAT .)
    NE              reduce using rule 30 (factor -> FLOAT .)
    LT              reduce using rule 30 (factor -> FLOAT .)
    GT              reduce using rule 30 (factor -> FLOAT .)
    LE              reduce using rule 30 (factor -> FLOAT .)
    GE              reduce using rule 30 (factor -> FLOAT .)


state 7

    (6) statement -> STRING . ID SEMICOLON

    ID              shift and go to state 23


state 8

    (14) statement -> expression . SEMICOLON
    (15) expression -> expression . PLUS term
    (16) expression -> expression . MINUS term
    (17) expression -> expression . LOR term
    (18) expression -> expression . LAND term
    (19) expression -> expression . EQ term
    (20) expression -> expression . NE term
    (21) expression -> expression . LT expression
    (22) expression -> expression . GT expression
    (23) expression -> expression . LE expression
    (24) expression -> expression . GE expression

    SEMICOLON       shift and go to state 24
    PLUS            shift and go to state 25
    MINUS           shift and go to state 26
    LOR             shift and go to state 27
    LAND            shift and go to state 28
    EQ              shift and go to state 29
    NE              shift and go to state 30
    LT              shift and go to state 31
    GT              shift and go to state 32
    LE              shift and go to state 33
    GE              shift and go to state 34


state 9

    (31) factor -> STRING_LITERAL .

    TIMES           reduce using rule 31 (factor -> STRING_LITERAL .)
    DIVIDE          reduce using rule 31 (factor -> STRING_LITERAL .)
    SEMICOLON       reduce using rule 31 (factor -> STRING_LITERAL .)
    PLUS            reduce using rule 31 (factor -> STRING_LITERAL .)
    MINUS           reduce using rule 31 (factor -> STRING_LITERAL .)
    LOR             reduce using rule 31 (factor -> STRING_LITERAL .)
    LAND            reduce using rule 31 (factor -> STRING_LITERAL .)
    EQ              reduce using rule 31 (factor -> STRING_LITERAL .)
    NE              reduce using rule 31 (factor -> STRING_LITERAL .)
    LT              reduce using rule 31 (factor -> STRING_LITERAL .)
    GT              reduce using rule 31 (factor -> STRING_LITERAL .)
    LE              reduce using rule 31 (factor -> STRING_LITERAL .)
    GE              reduce using rule 31 (factor -> STRING_LITERAL .)
    RPAREN          reduce using rule 31 (factor -> STRING_LITERAL .)
    RBRACKET        reduce using rule 31 (factor -> STRING_LITERAL .)
    COMMA           reduce using rule 31 (factor -> STRING_LITERAL .)


state 10

    (9) statement -> FOR . LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN statement

    LPAREN          shift and go to state 35


state 11

    (33) factor -> LPAREN . expression RPAREN
    (15) expression -> . expression PLUS term
    (16) expression -> . expression MINUS term
    (17) expression -> . expression LOR term
    (18) expression -> . expression LAND term
    (19) expression -> . expression EQ term
    (20) expression -> . expression NE term
    (21) expression -> . expression LT expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression GE expression
    (25) expression -> . term
    (34) expression -> . ID EQUALS expression
    (35) expression -> . LBRACKET elements RBRACKET
    (26) term -> . term TIMES factor
    (27) term -> . term DIVIDE factor
    (28) term -> . factor
    (29) factor -> . NUMBER
    (30) factor -> . FLOAT
    (31) factor -> . STRING_LITERAL
    (32) factor -> . ID
    (33) factor -> . LPAREN expression RPAREN

    ID              shift and go to state 37
    LBRACKET        shift and go to state 16
    NUMBER          shift and go to state 18
    FLOAT           shift and go to state 38
    STRING_LITERAL  shift and go to state 9
    LPAREN          shift and go to state 11

    expression                     shift and go to state 36
    term                           shift and go to state 15
    factor                         shift and go to state 17

state 12

    (10) statement -> WHILE . LPAREN expression RPAREN statement

    LPAREN          shift and go to state 39


state 13

    (11) statement -> LBRACE . statements RBRACE
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . INT ID SEMICOLON
    (5) statement -> . FLOAT ID SEMICOLON
    (6) statement -> . STRING ID SEMICOLON
    (7) statement -> . ID EQUALS expression SEMICOLON
    (8) statement -> . ID EQUALS STRING_LITERAL SEMICOLON
    (9) statement -> . FOR LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN statement
    (10) statement -> . WHILE LPAREN expression RPAREN statement
    (11) statement -> . LBRACE statements RBRACE
    (12) statement -> . IF LPAREN expression RPAREN statement
    (13) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (14) statement -> . expression SEMICOLON
    (15) expression -> . expression PLUS term
    (16) expression -> . expression MINUS term
    (17) expression -> . expression LOR term
    (18) expression -> . expression LAND term
    (19) expression -> . expression EQ term
    (20) expression -> . expression NE term
    (21) expression -> . expression LT expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression GE expression
    (25) expression -> . term
    (34) expression -> . ID EQUALS expression
    (35) expression -> . LBRACKET elements RBRACKET
    (26) term -> . term TIMES factor
    (27) term -> . term DIVIDE factor
    (28) term -> . factor
    (29) factor -> . NUMBER
    (30) factor -> . FLOAT
    (31) factor -> . STRING_LITERAL
    (32) factor -> . ID
    (33) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 4
    FLOAT           shift and go to state 6
    STRING          shift and go to state 7
    ID              shift and go to state 5
    FOR             shift and go to state 10
    WHILE           shift and go to state 12
    LBRACE          shift and go to state 13
    IF              shift and go to state 14
    LBRACKET        shift and go to state 16
    NUMBER          shift and go to state 18
    STRING_LITERAL  shift and go to state 9
    LPAREN          shift and go to state 11

    statements                     shift and go to state 40
    statement                      shift and go to state 3
    expression                     shift and go to state 8
    term                           shift and go to state 15
    factor                         shift and go to state 17

state 14

    (12) statement -> IF . LPAREN expression RPAREN statement
    (13) statement -> IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN          shift and go to state 41


state 15

    (25) expression -> term .
    (26) term -> term . TIMES factor
    (27) term -> term . DIVIDE factor

    SEMICOLON       reduce using rule 25 (expression -> term .)
    PLUS            reduce using rule 25 (expression -> term .)
    MINUS           reduce using rule 25 (expression -> term .)
    LOR             reduce using rule 25 (expression -> term .)
    LAND            reduce using rule 25 (expression -> term .)
    EQ              reduce using rule 25 (expression -> term .)
    NE              reduce using rule 25 (expression -> term .)
    LT              reduce using rule 25 (expression -> term .)
    GT              reduce using rule 25 (expression -> term .)
    LE              reduce using rule 25 (expression -> term .)
    GE              reduce using rule 25 (expression -> term .)
    RPAREN          reduce using rule 25 (expression -> term .)
    RBRACKET        reduce using rule 25 (expression -> term .)
    COMMA           reduce using rule 25 (expression -> term .)
    TIMES           shift and go to state 42
    DIVIDE          shift and go to state 43


state 16

    (35) expression -> LBRACKET . elements RBRACKET
    (36) elements -> . elements COMMA expression
    (37) elements -> . expression
    (38) elements -> .
    (15) expression -> . expression PLUS term
    (16) expression -> . expression MINUS term
    (17) expression -> . expression LOR term
    (18) expression -> . expression LAND term
    (19) expression -> . expression EQ term
    (20) expression -> . expression NE term
    (21) expression -> . expression LT expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression GE expression
    (25) expression -> . term
    (34) expression -> . ID EQUALS expression
    (35) expression -> . LBRACKET elements RBRACKET
    (26) term -> . term TIMES factor
    (27) term -> . term DIVIDE factor
    (28) term -> . factor
    (29) factor -> . NUMBER
    (30) factor -> . FLOAT
    (31) factor -> . STRING_LITERAL
    (32) factor -> . ID
    (33) factor -> . LPAREN expression RPAREN

    RBRACKET        reduce using rule 38 (elements -> .)
    COMMA           reduce using rule 38 (elements -> .)
    ID              shift and go to state 37
    LBRACKET        shift and go to state 16
    NUMBER          shift and go to state 18
    FLOAT           shift and go to state 38
    STRING_LITERAL  shift and go to state 9
    LPAREN          shift and go to state 11

    elements                       shift and go to state 44
    expression                     shift and go to state 45
    term                           shift and go to state 15
    factor                         shift and go to state 17

state 17

    (28) term -> factor .

    TIMES           reduce using rule 28 (term -> factor .)
    DIVIDE          reduce using rule 28 (term -> factor .)
    SEMICOLON       reduce using rule 28 (term -> factor .)
    PLUS            reduce using rule 28 (term -> factor .)
    MINUS           reduce using rule 28 (term -> factor .)
    LOR             reduce using rule 28 (term -> factor .)
    LAND            reduce using rule 28 (term -> factor .)
    EQ              reduce using rule 28 (term -> factor .)
    NE              reduce using rule 28 (term -> factor .)
    LT              reduce using rule 28 (term -> factor .)
    GT              reduce using rule 28 (term -> factor .)
    LE              reduce using rule 28 (term -> factor .)
    GE              reduce using rule 28 (term -> factor .)
    RPAREN          reduce using rule 28 (term -> factor .)
    RBRACKET        reduce using rule 28 (term -> factor .)
    COMMA           reduce using rule 28 (term -> factor .)


state 18

    (29) factor -> NUMBER .

    TIMES           reduce using rule 29 (factor -> NUMBER .)
    DIVIDE          reduce using rule 29 (factor -> NUMBER .)
    SEMICOLON       reduce using rule 29 (factor -> NUMBER .)
    PLUS            reduce using rule 29 (factor -> NUMBER .)
    MINUS           reduce using rule 29 (factor -> NUMBER .)
    LOR             reduce using rule 29 (factor -> NUMBER .)
    LAND            reduce using rule 29 (factor -> NUMBER .)
    EQ              reduce using rule 29 (factor -> NUMBER .)
    NE              reduce using rule 29 (factor -> NUMBER .)
    LT              reduce using rule 29 (factor -> NUMBER .)
    GT              reduce using rule 29 (factor -> NUMBER .)
    LE              reduce using rule 29 (factor -> NUMBER .)
    GE              reduce using rule 29 (factor -> NUMBER .)
    RPAREN          reduce using rule 29 (factor -> NUMBER .)
    RBRACKET        reduce using rule 29 (factor -> NUMBER .)
    COMMA           reduce using rule 29 (factor -> NUMBER .)


state 19

    (2) statements -> statements statement .

    INT             reduce using rule 2 (statements -> statements statement .)
    FLOAT           reduce using rule 2 (statements -> statements statement .)
    STRING          reduce using rule 2 (statements -> statements statement .)
    ID              reduce using rule 2 (statements -> statements statement .)
    FOR             reduce using rule 2 (statements -> statements statement .)
    WHILE           reduce using rule 2 (statements -> statements statement .)
    LBRACE          reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    LBRACKET        reduce using rule 2 (statements -> statements statement .)
    NUMBER          reduce using rule 2 (statements -> statements statement .)
    STRING_LITERAL  reduce using rule 2 (statements -> statements statement .)
    LPAREN          reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    RBRACE          reduce using rule 2 (statements -> statements statement .)


state 20

    (4) statement -> INT ID . SEMICOLON

    SEMICOLON       shift and go to state 46


state 21

    (7) statement -> ID EQUALS . expression SEMICOLON
    (8) statement -> ID EQUALS . STRING_LITERAL SEMICOLON
    (34) expression -> ID EQUALS . expression
    (15) expression -> . expression PLUS term
    (16) expression -> . expression MINUS term
    (17) expression -> . expression LOR term
    (18) expression -> . expression LAND term
    (19) expression -> . expression EQ term
    (20) expression -> . expression NE term
    (21) expression -> . expression LT expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression GE expression
    (25) expression -> . term
    (34) expression -> . ID EQUALS expression
    (35) expression -> . LBRACKET elements RBRACKET
    (26) term -> . term TIMES factor
    (27) term -> . term DIVIDE factor
    (28) term -> . factor
    (29) factor -> . NUMBER
    (30) factor -> . FLOAT
    (31) factor -> . STRING_LITERAL
    (32) factor -> . ID
    (33) factor -> . LPAREN expression RPAREN

    STRING_LITERAL  shift and go to state 48
    ID              shift and go to state 37
    LBRACKET        shift and go to state 16
    NUMBER          shift and go to state 18
    FLOAT           shift and go to state 38
    LPAREN          shift and go to state 11

    expression                     shift and go to state 47
    term                           shift and go to state 15
    factor                         shift and go to state 17

state 22

    (5) statement -> FLOAT ID . SEMICOLON

    SEMICOLON       shift and go to state 49


state 23

    (6) statement -> STRING ID . SEMICOLON

    SEMICOLON       shift and go to state 50


state 24

    (14) statement -> expression SEMICOLON .

    INT             reduce using rule 14 (statement -> expression SEMICOLON .)
    FLOAT           reduce using rule 14 (statement -> expression SEMICOLON .)
    STRING          reduce using rule 14 (statement -> expression SEMICOLON .)
    ID              reduce using rule 14 (statement -> expression SEMICOLON .)
    FOR             reduce using rule 14 (statement -> expression SEMICOLON .)
    WHILE           reduce using rule 14 (statement -> expression SEMICOLON .)
    LBRACE          reduce using rule 14 (statement -> expression SEMICOLON .)
    IF              reduce using rule 14 (statement -> expression SEMICOLON .)
    LBRACKET        reduce using rule 14 (statement -> expression SEMICOLON .)
    NUMBER          reduce using rule 14 (statement -> expression SEMICOLON .)
    STRING_LITERAL  reduce using rule 14 (statement -> expression SEMICOLON .)
    LPAREN          reduce using rule 14 (statement -> expression SEMICOLON .)
    $end            reduce using rule 14 (statement -> expression SEMICOLON .)
    RBRACE          reduce using rule 14 (statement -> expression SEMICOLON .)
    ELSE            reduce using rule 14 (statement -> expression SEMICOLON .)


state 25

    (15) expression -> expression PLUS . term
    (26) term -> . term TIMES factor
    (27) term -> . term DIVIDE factor
    (28) term -> . factor
    (29) factor -> . NUMBER
    (30) factor -> . FLOAT
    (31) factor -> . STRING_LITERAL
    (32) factor -> . ID
    (33) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 18
    FLOAT           shift and go to state 38
    STRING_LITERAL  shift and go to state 9
    ID              shift and go to state 52
    LPAREN          shift and go to state 11

    term                           shift and go to state 51
    factor                         shift and go to state 17

state 26

    (16) expression -> expression MINUS . term
    (26) term -> . term TIMES factor
    (27) term -> . term DIVIDE factor
    (28) term -> . factor
    (29) factor -> . NUMBER
    (30) factor -> . FLOAT
    (31) factor -> . STRING_LITERAL
    (32) factor -> . ID
    (33) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 18
    FLOAT           shift and go to state 38
    STRING_LITERAL  shift and go to state 9
    ID              shift and go to state 52
    LPAREN          shift and go to state 11

    term                           shift and go to state 53
    factor                         shift and go to state 17

state 27

    (17) expression -> expression LOR . term
    (26) term -> . term TIMES factor
    (27) term -> . term DIVIDE factor
    (28) term -> . factor
    (29) factor -> . NUMBER
    (30) factor -> . FLOAT
    (31) factor -> . STRING_LITERAL
    (32) factor -> . ID
    (33) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 18
    FLOAT           shift and go to state 38
    STRING_LITERAL  shift and go to state 9
    ID              shift and go to state 52
    LPAREN          shift and go to state 11

    term                           shift and go to state 54
    factor                         shift and go to state 17

state 28

    (18) expression -> expression LAND . term
    (26) term -> . term TIMES factor
    (27) term -> . term DIVIDE factor
    (28) term -> . factor
    (29) factor -> . NUMBER
    (30) factor -> . FLOAT
    (31) factor -> . STRING_LITERAL
    (32) factor -> . ID
    (33) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 18
    FLOAT           shift and go to state 38
    STRING_LITERAL  shift and go to state 9
    ID              shift and go to state 52
    LPAREN          shift and go to state 11

    term                           shift and go to state 55
    factor                         shift and go to state 17

state 29

    (19) expression -> expression EQ . term
    (26) term -> . term TIMES factor
    (27) term -> . term DIVIDE factor
    (28) term -> . factor
    (29) factor -> . NUMBER
    (30) factor -> . FLOAT
    (31) factor -> . STRING_LITERAL
    (32) factor -> . ID
    (33) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 18
    FLOAT           shift and go to state 38
    STRING_LITERAL  shift and go to state 9
    ID              shift and go to state 52
    LPAREN          shift and go to state 11

    term                           shift and go to state 56
    factor                         shift and go to state 17

state 30

    (20) expression -> expression NE . term
    (26) term -> . term TIMES factor
    (27) term -> . term DIVIDE factor
    (28) term -> . factor
    (29) factor -> . NUMBER
    (30) factor -> . FLOAT
    (31) factor -> . STRING_LITERAL
    (32) factor -> . ID
    (33) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 18
    FLOAT           shift and go to state 38
    STRING_LITERAL  shift and go to state 9
    ID              shift and go to state 52
    LPAREN          shift and go to state 11

    term                           shift and go to state 57
    factor                         shift and go to state 17

state 31

    (21) expression -> expression LT . expression
    (15) expression -> . expression PLUS term
    (16) expression -> . expression MINUS term
    (17) expression -> . expression LOR term
    (18) expression -> . expression LAND term
    (19) expression -> . expression EQ term
    (20) expression -> . expression NE term
    (21) expression -> . expression LT expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression GE expression
    (25) expression -> . term
    (34) expression -> . ID EQUALS expression
    (35) expression -> . LBRACKET elements RBRACKET
    (26) term -> . term TIMES factor
    (27) term -> . term DIVIDE factor
    (28) term -> . factor
    (29) factor -> . NUMBER
    (30) factor -> . FLOAT
    (31) factor -> . STRING_LITERAL
    (32) factor -> . ID
    (33) factor -> . LPAREN expression RPAREN

    ID              shift and go to state 37
    LBRACKET        shift and go to state 16
    NUMBER          shift and go to state 18
    FLOAT           shift and go to state 38
    STRING_LITERAL  shift and go to state 9
    LPAREN          shift and go to state 11

    expression                     shift and go to state 58
    term                           shift and go to state 15
    factor                         shift and go to state 17

state 32

    (22) expression -> expression GT . expression
    (15) expression -> . expression PLUS term
    (16) expression -> . expression MINUS term
    (17) expression -> . expression LOR term
    (18) expression -> . expression LAND term
    (19) expression -> . expression EQ term
    (20) expression -> . expression NE term
    (21) expression -> . expression LT expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression GE expression
    (25) expression -> . term
    (34) expression -> . ID EQUALS expression
    (35) expression -> . LBRACKET elements RBRACKET
    (26) term -> . term TIMES factor
    (27) term -> . term DIVIDE factor
    (28) term -> . factor
    (29) factor -> . NUMBER
    (30) factor -> . FLOAT
    (31) factor -> . STRING_LITERAL
    (32) factor -> . ID
    (33) factor -> . LPAREN expression RPAREN

    ID              shift and go to state 37
    LBRACKET        shift and go to state 16
    NUMBER          shift and go to state 18
    FLOAT           shift and go to state 38
    STRING_LITERAL  shift and go to state 9
    LPAREN          shift and go to state 11

    expression                     shift and go to state 59
    term                           shift and go to state 15
    factor                         shift and go to state 17

state 33
